# CloudControlledRoboter

./: .gitignore  .goreleaser.yml  Important Commands.txt  MainSender.py  README.md  _config.yml  tagnew.sh  tcpVideo.py  tcpreadmjpeg weil udp dropped.py  tcpreadmjpeg.py  udpreadmjpeg.py
BatteryData/: serverBatteryData.py
CameraData/: Important Commands.txt  tcpVideo.py  tcpreadmjpeg.py  udpreadmjpeg.py
LidarData/: exportLidarStream.py  exportLidarStream_json.py  lidarSim.py  liveDistanceData_json.py  liveDistanceVisual.py  receiveLidar.py  serverLidarData_json.py  serverLidarMap.py
MainSendergo/: Dockerfile  go.mod
MicroServices/: Broker.py  ConsumerOfKafkaCameraTesAsFramest.py  ConsumerOfKafkaCameraTestToVLC.py
ServiceFiles/: Readme.txt
TCP Communication Test/: TCP_Receiver.py  cameratest.py  sendonepic.py  spamrobin.py  streamDecoder.py  tcpstuff.py
TcpBroker/Broker/: Cargo.toml
TcpBroker/Broker/src/: config.rs  main.rs  statistics.rs  ui.rs  websocket_server.rs
appcontroller/: appControlHandler.py  betterPrinting.py  dataHandler.py  tcpController.py  websocketController.py
broker/: Cargo.toml
docs/: App Controller.md  App ControllerArguments.md  App.md  AppController.md  AppController_BetterPinting.md  AppController_ControlHandler.md  AppController_DataHandler.md  AppController_TCPController.md  AppController_WebsocketController.md  AppTooling.md  BrokerCmdArguments.md  Camera.md  Connections.md  Docker.md  Framework_setup.md  HowToDocument.md  InfraSetup.md  Kafka.md  LaptopSetup.md  Lidar.md  LidarDistance.md  LidarDistanceGlobalsUtils.md  LidarDistanceLidarThread.md  Setup.md  (+31 more)
(+64 files in other folders)
