[package]
name = "broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"], default-features = false }
clap = { version = "3.2.25", default-features = false, features = ["std"] }
tui = { version = "0.19.0", features = ["crossterm"], default-features = false }
crossterm = { version = "0.26.0", default-features = false }
tokio-tungstenite = { version = "0.20.1", features = [] }
futures-util = "0.3.29"

[build]
rustflags = ["-C", "target-feature=+crt-static"]
