[package]
name = "Broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
clap = "3.2.3"
tui = { version = "0.19.0", features = ["crossterm"] }
crossterm = "0.27.0"